fix layout shifting with popovers, fix css variables emitted by tailwind

--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -7,18 +7,27 @@
     U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-html,
-body {
-  height: 100%;
-}
-
-body {
+body > div {
   font-family: -apple-system, BlinkMacSystemFont, Avenir Next, Avenir, Helvetica, sans-serif;
   grid-template-areas:
     "nav"
     "content"
     "footer";
   grid-template-rows: auto 1fr auto;
+}
+
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: var(--salmon-600);
+  outline: 1px solid var(--salmon-600);
 }
 
 *::selection {
